--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,10 @@ packages = [{ include = "wordinfo" }]
 [tool.poetry.dependencies]
 python = "^3.12"
 inflect = "^7.4.0"
-parallelbar = "^2.4"
+halo = "^0.0.31"
 requests = "^2.32.3"
 docopt-ng = "^0.9.0"
+alive-progress = "^3.1.5"
 
 
 [build-system]
